--- a/index.html
+++ b/index.html
@@ -6,20 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <style>
-        #r {
-            font-size: large;
-            font-style: italic;
-            text-align: center;
-            background-color: aquamarine;
-            color: blue;
-        }
-
-        #maindiv {
-            text-align: center;
-
-        }
-    </style>
+    <link rel="stylesheet" href="my.css">
+    
     
 </head>
 
